--- a/_config.yml
+++ b/_config.yml
@@ -17,7 +17,7 @@ author :
   feedburner : nil
 
 # NOTE: Replacing this next line with your own URL
-production_url : https://Djeppschmidt.github.io/ProkaryoteGeneAnnotation_tutorial
+production_url : https://djeppschmidt.github.io/ProkaryoteGeneAnnotation_tutorial
 
 # Tell Github to use the kramdown markdown interpreter
 # (see https://help.github.com/articles/migrating-your-pages-site-from-maruku)
@@ -52,7 +52,7 @@ JB :
   #     This means always setting the protocol (http|https) or prefixing with "/"
   #
   # NOTE: Replace this next line with your own URL, likely with username.github.io
-  BASE_PATH : https://Djeppschmidt.github.io/ProkaryoteGeneAnnotation_tutoria
+  BASE_PATH : https://djeppschmidt.github.io/ProkaryoteGeneAnnotation_tutoria
 l
 
   # By default, the asset_path is automatically defined relative to BASE_PATH plus the enabled theme.
