--- a/_config.yml
+++ b/_config.yml
@@ -52,7 +52,7 @@ JB :
   #     This means always setting the protocol (http|https) or prefixing with "/"
   #
   # NOTE: Replace this next line with your own URL, likely with username.github.io
-  BASE_PATH : https://djeppschmidt.github.io/ProkaryoteGeneAnnotation_tutoria
+  BASE_PATH : http://djeppschmidt.github.io/ProkaryoteGeneAnnotation_tutoria
 l
 
   # By default, the asset_path is automatically defined relative to BASE_PATH plus the enabled theme.
